# sqisign-rs

./: .cla-signed-users  .dockerignore  .gitignore  .gitmodules  COMPRESSION.md  CONTRIBUTING.md  Cargo.toml  DPA_COUNTERMEASURES.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_KEY  README.md  SECURITY.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: add-cla-user.yml  ci.yml  cla-file-check.yml  hermetic-build.yml  kat.yml  release.yml  sign.yml  tests.yml  update-signature.yml
crates/alloc/: Cargo.toml
crates/kat/: Cargo.toml
crates/kat/src/: kat_parser.rs  lib.rs  nist_drbg.rs
crates/kat/tests/: kat_keygen.rs  kat_keygen_l3.rs  kat_keygen_l5.rs  kat_sign.rs  kat_sign_l3.rs  kat_sign_l5.rs  kat_verify.rs  kat_verify_l3.rs  kat_verify_l5.rs
crates/sqisign-rs/: Cargo.toml  README.md
crates/sqisign-rs/benches/: sign_bench.rs
crates/sqisign-rs/src/: lib.rs
crates/sqisign-rs/src/alloc/: mod.rs
crates/sqisign-rs/src/id2iso/: dpa.rs  mod.rs  sign_precomp.rs  sign_side.rs  verify_side.rs
crates/sqisign-rs/src/keygen/: keygen.rs  mod.rs  sk_encoding.rs
crates/sqisign-rs/src/precomp_signing/: mod.rs
crates/sqisign-rs/src/precomp_signing/level1/: endomorphism_action.rs  mod.rs  quaternion_constants.rs  quaternion_data.rs  torsion_constants.rs
crates/sqisign-rs/src/precomp_signing/level3/: endomorphism_action.rs  quaternion_constants.rs  quaternion_data.rs  torsion_constants.rs
crates/sqisign-rs/src/precomp_signing/level5/: endomorphism_action.rs  quaternion_constants.rs  quaternion_data.rs  torsion_constants.rs
crates/sqisign-rs/src/quaternion/: algebra.rs  dim2.rs  dim4.rs  dpe.rs  fast_modpow.rs  hnf.rs  ideal.rs  intbig.rs  integers.rs  lat_ball.rs  lattice.rs  lll.rs  mod.rs  montgomery.rs  normeq.rs  rational.rs  types.rs
crates/sqisign-rs/src/secure_alloc/: mod.rs
crates/sqisign-rs/src/sign/: compact.rs  dim4.rs  mod.rs  sign.rs
crates/sqisign-rs/tests/: c_crossvalidate_dim.rs  c_crossvalidate_id2iso.rs  c_crossvalidate_intbig.rs  c_crossvalidate_lll.rs  c_crossvalidate_quat.rs  c_crossvalidate_signing_precomp.rs  compact_api.rs  serialization_roundtrip.rs  sign_roundtrip.rs  signing_constants.rs  unified_autodetect.rs  zeroize.rs
crates/verify/: Cargo.toml  README.md
crates/verify/benches/: verify_bench.rs
crates/verify/fuzz/: Cargo.toml  run_fuzz.sh
crates/verify/fuzz/fuzz_targets/: fuzz_any_signature.rs  fuzz_any_signature_l3.rs  fuzz_any_signature_l5.rs  fuzz_compressed_from_bytes.rs  fuzz_compressed_from_bytes_l3.rs  fuzz_compressed_from_bytes_l5.rs  fuzz_expanded_from_bytes.rs  fuzz_expanded_from_bytes_l3.rs  fuzz_expanded_from_bytes_l5.rs  fuzz_pubkey_from_bytes.rs  fuzz_pubkey_from_bytes_l3.rs  fuzz_pubkey_from_bytes_l5.rs  fuzz_signature_from_bytes.rs  fuzz_signature_from_bytes_l3.rs  fuzz_signature_from_bytes_l5.rs  fuzz_verify.rs  fuzz_verify_l3.rs  fuzz_verify_l5.rs
crates/verify/src/: compact.rs  formats.rs  hash.rs  lib.rs  types.rs  verify.rs
crates/verify/src/ec/: basis.rs  curve.rs  isogeny.rs  jacobian.rs  mod.rs  pairing.rs  point.rs
crates/verify/src/fp/: fp.rs  fp2.rs  level1.rs  level3.rs  level5.rs  mod.rs
crates/verify/src/hd/: arith.rs  basis.rs  canonical.rs  chain.rs  challenge.rs  dim2.rs  dim4.rs  field.rs  gluing.rs  gluing_chain.rs  hd_verify.rs  isogeny.rs  kani.rs  mod.rs  nqr_tables_l1.rs  nqr_tables_l3.rs  nqr_tables_l5.rs  point.rs  product_theta.rs  response.rs  self_contained.rs  strategy.rs  structure.rs  wire.rs
crates/verify/src/params/: level1.rs  level3.rs  level5.rs  mod.rs
crates/verify/src/precomp/: mod.rs
crates/verify/src/precomp/level1/: e0_basis.rs  ec_params.rs  mod.rs
crates/verify/src/precomp/level3/: e0_basis.rs  ec_params.rs  mod.rs
crates/verify/src/precomp/level5/: e0_basis.rs  ec_params.rs  mod.rs
crates/verify/src/theta/: basis_change.rs  chain.rs  couple.rs  gluing.rs  isogeny.rs  mod.rs  splitting.rs  theta_structure.rs
crates/verify/tests/: biext_reftest.rs  c_crossvalidate.rs  c_crossvalidate_basis.rs  c_crossvalidate_biext.rs  c_crossvalidate_fp.rs  c_crossvalidate_isog.rs  c_crossvalidate_precomp.rs  c_crossvalidate_theta_chain.rs  c_crossvalidate_theta_foundation.rs  c_crossvalidate_theta_isog.rs  c_crossvalidate_verify_types.rs  common_mod.rs  curve_arith.rs  fp2_tests.rs  fp2_tests_l3.rs  fp2_tests_l5.rs  fp_tests.rs  fp_tests_l3.rs  fp_tests_l5.rs  gluing_vectors.json  hd_basis.rs  hd_basis_levels.rs  hd_bench.rs  hd_canonical.rs  hd_canonical_hints.rs  hd_chain.rs  hd_challenge.rs  hd_dim2.rs  hd_gluing.rs  hd_gluing_chain.rs  hd_isogeny.rs  hd_kani.rs  hd_primitive_bench.rs  hd_product_theta.rs  hd_response.rs  hd_self_contained.rs  hd_stage6.rs  hd_strategy.rs  hd_vectors.rs  hd_verify.rs  (+6 more)
crates/verify/tests/hd_common/: mod.rs
images/hermetic-build/: Containerfile
scripts/: auto-version.sh
scripts/precomp/: ENDOMORPHISM_PRECOMP_HANDOFF.md  generate_e0_basis_rust.sage  generate_rust_constants.sage  generate_rust_constants.sage.py  parse_fp_constants.py  run_all_endomorphism.sh  run_endomorphism_precomp.sage  rustformat.py
sqisignhd-harness/: extract_chain.py  extract_gluing.py  extract_isogeny_step.py  extract_kani_matrices.py  extract_product_theta.py  extract_strategy.py  extract_theta_arith.py  extract_vectors.py  kani_matrices_l1.json  product_theta_l1.json  setup_reference.sh  strategy_vectors.json  test_vectors_l1.json  validate_vectors.py
tools/bench-bigint/: Cargo.toml
tools/bench-zeroalloc/: Cargo.toml
tools/c-validate/: .gitignore  README.md  basis_validate.c  bench_verify.c  biext_reftest_trace.c  biext_reftest_wrapper.c  biext_validate.c  build.sh  build_basis.sh  build_biext.sh  build_biext_reftest.sh  build_dim.sh  build_ec.sh  build_id2iso.sh  build_intbig.sh  build_isog.sh  build_lll.sh  build_precomp.sh  build_quat.sh  build_signing_precomp.sh  build_theta_chain.sh  build_theta_foundation.sh  build_theta_isog.sh  build_verify_types.sh  cval.c  dim_validate.c  ec_validate.c  id2iso_expected.txt  id2iso_validate.c  intbig_validate.c  (+12 more)
tools/profile-sign/: Cargo.toml
tools/profile-sign/src/: main.rs
(+8 files in other folders)
