[package]
name = "sqisign-rs"
description = "SQIsign post-quantum signatures: keygen, sign, verify in pure Rust"
readme = "../../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sqisign-verify = { version = "0.4.0", path = "../verify" }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-integer = { version = "0.1", default-features = false }
crypto-bigint = { workspace = true }
zeroize = { workspace = true }
rand = { version = "0.8", default-features = false }
rand_core = { workspace = true }
sha3 = { workspace = true }
subtle = { workspace = true }
hybrid-array = { workspace = true }
signature = { workspace = true, features = ["rand_core"] }
paste = "1"

[features]
default = ["std"]
# `std` (on by default) registers the zeroing global allocator so secret-derived
# heap data is scrubbed on free with no caller action. Turn it off
# (`default-features = false`) for a `no_std` build; the crate then registers no
# global allocator and the embedder supplies one (optionally the zeroing wrapper
# via `enable_secure_allocator!`).
std = []
# `dpa-protect` (off by default) enables physical side-channel countermeasures
# in the signing path: each secret-curve torsion basis fed into a Montgomery
# ladder is re-expressed in a fresh random projective representative per
# signature, and the secondary u/v theta chain uses the randomized variant.
# It changes no signature bytes (the affine result is identical), but it does
# consume extra randomness, so the NIST KAT vectors only reproduce byte-for-byte
# with this feature OFF. Production deployments on physical hardware should
# enable it.
dpa-protect = []

[dev-dependencies]
rand = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
# For the unified-autodetect HD test vectors (parse the SQIsignHD oracle JSON).
serde_json = "1"
hex = "0.4"

[[bench]]
name = "sign_bench"
harness = false
