[package]
name = "profile-sign"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sqisign-rs = { path = "../../crates/sqisign-rs" }
rand = "0.8"
pprof = { version = "0.14", features = ["flamegraph"] }

[features]
default = ["dhat-heap"]
dhat-heap = ["dhat"]

[dependencies.dhat]
version = "0.3"
optional = true
